--- a/app/src/main/res/layout/activity_profie.xml
+++ b/app/src/main/res/layout/activity_profie.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,19 +23,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="@string/app_name"
             android:textColor="@android:color/black"
-            android:textSize="18dp" />
+            android:textSize="25dp" />
 
-        <Button
+        <TextView
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/bg_break_line"
+            android:gravity="center" />
 
         <android.support.v7.widget.RecyclerView
+            android:background="#26A2A2A2"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:padding="10dp" />
     </LinearLayout>
 
 </LinearLayout>
