--- a/app/src/main/res/layout/view_bottom_sheet.xml
+++ b/app/src/main/res/layout/view_bottom_sheet.xml
@@ -33,19 +33,39 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:text="skhdaskhdlka shkdsahkdahkdfd sdsdsa "
             android:textColor="@android:color/black"
             android:textSize="18dp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvDirect"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:text="Chỉ đường"
-        android:textColor="@android:color/black"
-        android:textSize="14dp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvDirect"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_rect"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="Chỉ đường"
+            android:textColor="@android:color/black"
+            android:textSize="14dp" />
+
+        <ImageView
+            android:id="@+id/imgPhone"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/bg_rect"
+            android:padding="10dp"
+            android:src="@drawable/icon_phone"
+            android:text="Chỉ đường"
+            android:textColor="@android:color/black"
+            android:textSize="14dp" />
+    </LinearLayout>
+
 
 </LinearLayout>
