--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="img_size">80dp</dimen>
+    <dimen name="margin_betwwen_item">10dp</dimen>
     <dimen name="img_size_profile">100dp</dimen>
     <dimen name="img_size_big">300dp</dimen>
     <dimen name="img_size_medium">200dp</dimen>
