--- a/app/src/main/res/layout/activity_profie.xml
+++ b/app/src/main/res/layout/activity_profie.xml
@@ -2,56 +2,80 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="#26A2A2A2"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:background="@color/colorAccent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/imgMenu"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:text="Profile"
-            android:textColor="@android:color/black"
-            android:textSize="18dp" />
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_menu" />
 
         <TextView
             android:id="@+id/tvUserName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
             android:text="@string/app_name"
             android:textColor="@android:color/black"
             android:textSize="25dp" />
 
-        <TextView
-            android:id="@+id/btnLogin"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/bg_break_line"
-            android:gravity="center" />
-
-        <TextView
-            android:id="@+id/btnAcc"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/bg_break_line"
-            android:gravity="center" />
-
-        <android.support.v7.widget.RecyclerView
-            android:background="#26A2A2A2"
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:padding="10dp" />
     </LinearLayout>
 
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@android:color/white"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvLogin"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="Login"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/tvAcc"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="Upgrade Premium Acccount"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
