--- a/app/src/main/res/layout/view_bottom_sheet.xml
+++ b/app/src/main/res/layout/view_bottom_sheet.xml
@@ -47,12 +47,12 @@
 
         <TextView
             android:id="@+id/tvDirect"
-            android:layout_width="100dp"
+            android:layout_width="74dp"
             android:layout_height="match_parent"
             android:background="@drawable/bg_rect"
+            android:foreground="@drawable/ic_location"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Chỉ đường"
             android:textColor="@android:color/black"
             android:textSize="14dp" />
 
@@ -62,21 +62,21 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:background="@drawable/bg_rect"
+            android:foreground="@drawable/call"
             android:padding="10dp"
-            android:src="@drawable/icon_phone"
-            android:text="Chỉ đường"
+
             android:textColor="@android:color/black"
             android:textSize="14dp" />
 
         <TextView
             android:id="@+id/tvDetail"
-            android:layout_width="100dp"
+            android:layout_width="86dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:background="@drawable/bg_rect"
+            android:foreground="@drawable/thongtin"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Detail"
             android:textColor="@android:color/black"
             android:textSize="14dp" />
     </LinearLayout>
