--- a/app/src/main/res/drawable/bg_break_line.xml
+++ b/app/src/main/res/drawable/bg_break_line.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#A2A2A2"
+        android:color="@android:color/white"
         android:dashWidth="3dp"
         android:dashGap="1dp"/>
-    <solid android:color="@android:color/white"></solid>
+
 
 
 </shape>
