--- a/app/src/main/res/drawable/bg_rect_conner.xml
+++ b/app/src/main/res/drawable/bg_rect_conner.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="4dp" />
+    <corners android:radius="25dp" />
     <stroke
-        android:width="1dp"
-        android:color="#A2A2A2" />
 
+        android:width="1dp"
+         />
+    <solid android:color="@android:color/white"></solid>
 </shape>
