--- a/app/src/main/res/layout/activity_profie.xml
+++ b/app/src/main/res/layout/activity_profie.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#26A2A2A2"
+
     android:fitsSystemWindows="true"
+    android:background="@drawable/ic_backgroundsugup"
     android:orientation="vertical">
 
     <LinearLayout
@@ -25,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
-            android:text="@string/app_name"
+
             android:textColor="@android:color/black"
             android:textSize="25dp" />
 
