--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,11 +15,32 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="67dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:layout_weight="1"
+
+                android:text="ĐĂNG KÝ TÀI KHOẢN"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="25dp"
             android:background="@android:color/white"
+
             android:orientation="horizontal">
 
             <EditText
@@ -27,12 +48,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
                 android:layout_weight="3"
                 android:background="@drawable/bg_box_text"
 
                 android:fadeScrollbars="false"
                 android:hint="Nhập Họ Và Tên"
-                android:paddingLeft="10dp"
+
                 android:textColor="@android:color/black"
                 android:textSize="18dp" />
         </LinearLayout>
@@ -113,7 +135,7 @@
 
         <Button
             android:id="@+id/btnSignUp"
-            android:layout_width="fill_parent"
+            android:layout_width="149dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
@@ -121,7 +143,7 @@
             android:background="@drawable/bg_rect"
             android:padding="10dp"
 
-            android:text="Signup" />
+            android:text="ĐĂNG KÝ" />
 
     </LinearLayout>
 
