--- a/app/src/main/res/layout/activity_verify_account.xml
+++ b/app/src/main/res/layout/activity_verify_account.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/ic_backgroundsugup"
     android:layout_height="match_parent"
     >
 
@@ -42,9 +43,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="25dp"
-            android:text="Wait for the code I sent You"
+            android:text="Chờ một chút ....!! Code đang về"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/places_text_black_alpha_87" />
 
         <ProgressBar
             android:id="@+id/progressbar"
@@ -62,7 +63,7 @@
             android:layout_marginTop="10dp"
             android:digits="0123456789"
             android:drawablePadding="10dp"
-            android:hint="enter verification code"
+            android:hint="Nhập code vào tại đây"
             android:inputType="phone"
             android:maxLength="10" />
 
@@ -73,10 +74,9 @@
             android:layout_below="@id/editTextCode"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="Sign In"
-            android:textAllCaps="false"
-            android:textColor="#cdd8f1" />
+            android:background="@drawable/bg_rect"
+            android:text="Đăng nhập"
+            android:textAllCaps="false" />
 
     </RelativeLayout>
 
