--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -92,7 +92,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="delete" />
+            android:text="XÓA BÀI" />
 
         <View
             android:layout_width="1dp"
@@ -105,7 +105,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Edit" />
+            android:text="SỬA BÀI" />
     </LinearLayout>
 
 </LinearLayout>
